--- a/index.ejs
+++ b/index.ejs
@@ -3,46 +3,21 @@
     <head>
         <meta charset="UTF-8" />
         <title>Bot Chat Embed Test</title>
-        <link href="https://unpkg.com/botframework-webchat/botchat.css" rel="stylesheet" />
-        <style>
-            .wc-chatview-panel {
-                width: 320px;
-                height: 500px;
-                position: relative;
-            }
-        </style>
+        <link href="botchat.css" rel="stylesheet" />
     </head>
     <body>
         <div>
-            <div style="width:320px; float:left;">
-                <h1>Config</h1>
-                <form method="post" action=".">
-                    <p>
-                        <label for="secret">App Secret</label>
-                        <input id="secret" name="secret" type="text" style="width:300px;" value="<%= secret %>" placeholder="leave blank for TestBotV3"/>
-                    </p>
-                    <p>
-                        <input type="submit"/>
-                    </p>
-                </form>
-<!--                
-                <h1>Backchannel</h1>
-                <textarea id="message" rows="5" cols="40"></textarea>
-                <button onclick="sendMessage(document.getElementById('message').value)">Send Message To Bot</button>
--->
-            </div>
-            <div style="margin-left: 320px" id="BotChatGoesHere"/>
+            <div id="BotChatGoesHere"/>
             <div style="clear:both;"/>
         </div>
-        <h2>Please report any issues with botchat on <a href="https://github.com/billba/botchat/issues">github</a></h2>
-        <script src="https://unpkg.com/botframework-webchat/botchat.js"></script>
+        <script src="botchat.js"></script>
         <script>
             BotChat.App({
                 directLine: {
                     token: "<%= token %>"
                 },
                 user: { id: 'botchattest' },
-                bot: { id: 'yourbot' },
+                bot: { id: 'aura' },
             }, document.getElementById("BotChatGoesHere"));
         </script>
     </body>
