--- a/index.ejs
+++ b/index.ejs
@@ -11,8 +11,23 @@
             <div id="BotChatGoesHere"/>
             <div style="clear:both;"/>
         </div>
+
+hello world!!
+<p id="demo"></p>
+Bye world!!
+                        
         <script src="botchat.js"></script>
         <script>
+            var now = new Date();
+
+            // display offline page, all the time
+            // EXCEPT display BOT in 9pm-10pm in April 2017
+            if((now.getFullYear()==2017) && ((now.getMonth()+1)==4) ){ // for April 2017
+                if(now.getHours()!=21) {         // Everyday from 9pm-10pm (21:xx hour)
+//                    window.location.replace("offline.html");
+                }
+            }
+            // else, launch Chatbot
             BotChat.App({
                 directLine: {
                     token: "<%= token %>"
