disabled offline.html

--- a/index.ejs
+++ b/index.ejs
@@ -23,7 +23,7 @@ Bye world!!
             // display offline page, all the time
             // EXCEPT display BOT in 9pm-10pm in April 2017
             if((now.getFullYear()==2017) && ((now.getMonth()+1)==4) ){ // for April 2017
-                if(now.getHours()!=21) {         // Everyday from 9pm-10pm (21:xx hour)
+                if(now.getHours()!=21) {         //WHITELIST 9pm-10pm (21:xx hour) for chatbot
 //                    window.location.replace("offline.html");
                 }
             }
