--- a/index.ejs
+++ b/index.ejs
@@ -12,10 +12,6 @@
             <div style="clear:both;"/>
         </div>
 
-hello world!!
-<p id="demo"></p>
-Bye world!!
-                        
         <script src="botchat.js"></script>
         <script>
             var now = new Date();
@@ -24,7 +20,7 @@ Bye world!!
             // EXCEPT display BOT in 9pm-10pm in April 2017
             if((now.getFullYear()==2017) && ((now.getMonth()+1)==4) ){ // for April 2017
                 if(now.getHours()!=21) {         //WHITELIST 9pm-10pm (21:xx hour) for chatbot
-//                    window.location.replace("offline.html");
+                    window.location.replace("offline.html");
                 }
             }
             // else, launch Chatbot
