--- a/index.ejs
+++ b/index.ejs
@@ -18,10 +18,8 @@
 
             // display offline page, all the time
             // EXCEPT display BOT in 9pm-10pm in April 2017
-            if((now.getFullYear()==2017) && ((now.getMonth()+1)==4) ){ // for April 2017
-                if(now.getHours()!=21) {         //WHITELIST 9pm-10pm (21:xx hour) for chatbot
-//                    window.location.replace("offline.html");
-                }
+            if(now.getHours()<21) {         //WHITELIST 9pm-12pm for chatbot
+                window.location.replace("http://new.digi.com.my/webchat");
             }
             // else, launch Chatbot
             BotChat.App({
