--- a/botchat.css
+++ b/botchat.css
@@ -134,6 +134,8 @@ body .wc-app, .wc-app button, .wc-app input, .wc-app textarea {
   left: 0;
   top: 0;
   bottom: 0;
+  max-width: 400px;
+  margin: auto;
 }
 
 /* messages */
