--- a/index.ejs
+++ b/index.ejs
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-        <title>Bot Chat Embed Test</title>
+        <title>Digi Virtual Assistant</title>
         <link href="botchat.css" rel="stylesheet" />
     </head>
     <body>
@@ -18,7 +18,7 @@
 
             // display offline page, all the time
             // EXCEPT display BOT in 9pm-10pm in April 2017
-            if(now.getHours()<21) {         //WHITELIST 9pm-12pm for chatbot
+            if(now.getHours()<21) {         //WHITELIST 9pm-12pm for chatbot                
 //                window.location.replace("http://new.digi.com.my/webchat");
             }
             // else, launch Chatbot
@@ -26,7 +26,7 @@
                 directLine: {
                     token: "<%= token %>"
                 },
-                user: { id: 'botchattest' },
+                user: { id: 'User' },
                 bot: { id: 'aura' },
             }, document.getElementById("BotChatGoesHere"));
         </script>
