changed username to me

--- a/index.ejs
+++ b/index.ejs
@@ -26,7 +26,7 @@
                 directLine: {
                     token: "<%= token %>"
                 },
-                user: { id: 'User' },
+                user: { id: 'Me' },
                 bot: { id: 'aura' },
             }, document.getElementById("BotChatGoesHere"));
         </script>
