--- a/index.ejs
+++ b/index.ejs
@@ -16,6 +16,12 @@
         <script>
             var now = new Date();
 
+            
+            // display offline page, if requested to
+            <%if (process.env.OFFLINE == '1') { %>
+                window.location.replace("http://bot.digi.com.my/offline.html");
+            <% } %>
+
             // display offline page, all the time
             // EXCEPT display BOT in 9pm-10pm in April 2017
             if(now.getHours()<21) {         //WHITELIST 9pm-12pm for chatbot                
