--- a/botchat.css
+++ b/botchat.css
@@ -37,7 +37,10 @@ body .wc-app, .wc-app button, .wc-app input, .wc-app textarea {
   right: 0;
   top: 0;
   z-index: 1; }
-
+.wc-header .wc-header-menu {
+  position: absolute;
+  right: 10px;
+}
 .wc-time {
   color: #999;
   margin-bottom: 10px; }
@@ -214,7 +217,7 @@ body .wc-app, .wc-app button, .wc-app input, .wc-app textarea {
     color: #0073de;    /* modified by Chin 28 Apr 2017 */
     font-weight: 600;  /* modified by Chin 28 Apr 2017 */
     min-height: 32px;
-    width: 270px;      /* modified by Chin 9 May 2017 for avatar*/
+    width: 240px;      /* modified by Chin 9 May 2017 for avatar*/
     padding: 0 16px;
     border-radius: 10px;/* Chin added 28 Apr 2017 */
     font-size: 14px; } /* Chin added 5 May  2017 */
@@ -303,12 +306,12 @@ body .wc-app, .wc-app button, .wc-app input, .wc-app textarea {
 
 /* alternate chat sizes */
 .wc-message {
-/*  max-width: 85%;*/ }   /* Chin Commented out 17 Apr 2017 to wc-card alignment problem*/
+  max-width: 75%; }   /* Chin Commented out 17 Apr 2017 to wc-card alignment problem*/
 
 .wc-card {
   border: 0px solid #d2dde5;   /* Chin modified 28 Apr 2017 */
   padding: 8px;
-  width: 275px;                 /* Chin modified for Avatar 9 May 2017*/
+  /*width: 80%;  */               /* Chin modified for Avatar 9 May 2017*/
 }
 
 .wc-wide .wc-card {
@@ -348,7 +351,8 @@ body .wc-app, .wc-app button, .wc-app input, .wc-app textarea {
 
 /* carousel */
 .wc-carousel {
-  position: relative; }
+  position: relative; 
+  width: 263px;}
   .wc-carousel button.scroll {
     background-color: #FFE227;    /* Modified by Chin 3 May 2017 */
     height: 28px;
@@ -407,7 +411,7 @@ body .wc-app, .wc-app button, .wc-app input, .wc-app textarea {
 .wc-message-from-bot .wc-message-content {
   background-color: #eceff1;
   color: #000; 
-  width: 285px; }    /* added by Chin 5 May 2017 */
+  /*width: 90%; */}    /* added by Chin 5 May 2017 */
 
 .wc-message-from-bot svg.wc-message-callout path {
   fill: #eceff1; }
