--- a/index.ejs
+++ b/index.ejs
@@ -6,7 +6,7 @@
         <title>Digi Virtual Assistant</title>
         <link href="botchat.css" rel="stylesheet" />
     </head>
-    <body>
+    <body style="background:#fd0 url('http://new.digi.com.my/cs/site_template/digi/images/digi-pattern.png');">
         <div>
             <div id="BotChatGoesHere"/>
             <div style="clear:both;"/>
@@ -16,7 +16,6 @@
         <script>
             var now = new Date();
 
-            
             // display offline page, if requested to
             <%if (process.env.OFFLINE == '1') { %>
                 window.location.replace("http://bot.digi.com.my/offline.html");
