--- a/index.ejs
+++ b/index.ejs
@@ -12,7 +12,7 @@
             <div style="clear:both;"/>
         </div>
 
-        <script src="botchat.js"></script>
+        <script src="botchat.min.js"></script>
         <script>
             var now = new Date();
 
