--- a/botchat.css
+++ b/botchat.css
@@ -4,13 +4,13 @@ body .wc-app, .wc-app button, .wc-app input, .wc-app textarea {
   font-size: 15px; }    /* modified by Chin 28 Apr 2017 */
 
 .wc-app button {
-  background-color: #FFE227;
-  border: 1px solid #055cb2;    /* modified by Chin 3 May 2017 */
+  background-color: #FFFFFF;
+  border: 1px solid #0073de;    /* modified by Chin 3 May 2017 */
   border-radius: 6px;    /* chin modified 28 Apr 2017 */
-  color: #000;
+  color: #0073de;
   cursor: pointer;
   outline: none;
-  transition: color .2s ease, background-color .2s ease; }
+  transition: color .3s ease, background-color .3s ease; }
 
 .wc-app h1, .wc-app h2, .wc-app h3, .wc-app h4, .wc-app p, .wc-app ul, .wc-app ol {
   margin: 0;
@@ -47,9 +47,14 @@ body .wc-app, .wc-app button, .wc-app input, .wc-app textarea {
   left: 40px;
 }
 .wc-header-menu {
-  position: absolute;
-  right: 10px;
+  float: right;
 }
+.wc-header-menu:hover {
+  float: right;
+  background-color: #0073de;
+  color: #FFFFFF;
+}
+
 .wc-time {
   color: #999;
   margin-bottom: 10px; }
@@ -65,6 +70,13 @@ body .wc-app, .wc-app button, .wc-app input, .wc-app textarea {
   right: 0;
   top: 38px;
   transition: transform 0.2s cubic-bezier(0, 0, 0.5, 1); }
+
+.wc-intro-logo {
+  margin: auto;
+  display: block;
+  width: 40%;
+  margin-bottom: 20px;
+}
 
 .wc-message-group-content {
   overflow: hidden; }
