--- a/index.ejs
+++ b/index.ejs
@@ -12,7 +12,9 @@
             <div style="clear:both;"/>
         </div>
 
-        <script src="botchat.min.js"></script>
+        <script src="botchat.js"></script>
+		<script src=https://code.jquery.com/jquery-3.2.1.min.js></script>
+       
         <script>
             var now = new Date();
 
