--- a/botchat.css
+++ b/botchat.css
@@ -84,7 +84,13 @@ body .wc-app, .wc-app button, .wc-app input, .wc-app textarea {
   margin: auto;
   display: block;
   width: 40%;
+}
+
+.wc-intro-name {
+  text-align: center;
+  font-size: 23px;
   margin-bottom: 20px;
+  font-weight: 100;
 }
 
 .wc-message-group-content {
@@ -412,6 +418,8 @@ body .wc-app, .wc-app button, .wc-app input, .wc-app textarea {
   .wc-carousel li p {
     min-height: 4em;
     white-space: normal; }
+  .wc-carousel-item{
+    width: 263px;}
 
 /* from me */
 .wc-message-from-me {
