--- a/index.ejs
+++ b/index.ejs
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <title>Yello</title>
-        <link href="botchat.min.css" rel="stylesheet" />
+        <link href="botchat.css" rel="stylesheet" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
    
     </head>
@@ -66,7 +66,7 @@
             <div style="clear:both;"/>
 
 			<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-			<script src="botchat.js"> </script>
+			<script src="botchat.min.js"> </script>
 			<script src="digihelper.js"> </script>
 
 			<script>
