--- a/index.ejs
+++ b/index.ejs
@@ -66,7 +66,7 @@
             <div style="clear:both;"/>
 
 			<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-			<script src="botchat.js"> </script>
+			<script src="botchat.min.js"> </script>
 			<script src="digihelper.js"> </script>
 
 			<script>
