--- a/botchat.css
+++ b/botchat.css
@@ -617,7 +617,8 @@ body .wc-app, .wc-app button, .wc-app input, .wc-app textarea {
 
 .wc-textbox {
   bottom: 0;
-  left: 48px;
+/*  left: 48px;*/
+  left: 25px;
   right: 49px; }
 
 .wc-send {
@@ -651,7 +652,7 @@ body .wc-app, .wc-app button, .wc-app input, .wc-app textarea {
 /* text formats */
 .format-markdown > p {
   margin-bottom: 0px; 
-  margin-left: 15px;}
+  margin-left: 5px;}
 
 .format-markdown code {
   white-space: pre-wrap; }
