--- a/botchat.css
+++ b/botchat.css
@@ -10,7 +10,9 @@ body .wc-app, .wc-app button, .wc-app input, .wc-app textarea {
   color: #0073de;
   cursor: pointer;
   outline: none;
-  transition: color .3s ease, background-color .3s ease; }
+  transition: color .3s ease, background-color .3s ease; 
+  line-height: normal;
+}
 
 .wc-app h1, .wc-app h2, .wc-app h3, .wc-app h4, .wc-app p, .wc-app ul, .wc-app ol {
   margin: 0;
@@ -37,6 +39,10 @@ body .wc-app, .wc-app button, .wc-app input, .wc-app textarea {
   right: 0;
   top: 0;
   z-index: 1; }
+
+.wc-header img {
+	width: inherit;
+}
 
 .wc-header-icon{
 
@@ -156,6 +162,9 @@ body .wc-app, .wc-app button, .wc-app input, .wc-app textarea {
 
 .wc-loading-container {
   position: relative;
+}
+.wc-loading-container img {
+  width: inherit;
 }
 .wc-loading-container-typing {
   display: block;
@@ -304,6 +313,10 @@ body .wc-app, .wc-app button, .wc-app input, .wc-app textarea {
   position: relative;
   /*transition: max-height 2s ease-in-out;*/ }
 
+.wc-message-wrapper img {
+  width: inherit;
+}
+
 @keyframes animationFrames {
   0% {
     /*max-height: 0;*/
@@ -331,7 +344,10 @@ body .wc-app, .wc-app button, .wc-app input, .wc-app textarea {
   border-radius: 10px;        /* Chin modified 28 Apr 2017 */
   box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.2);
   padding: 8px;
-  word-break: break-word; }
+  word-break: break-word; 
+  font-weight: normal;
+  line-height: normal;
+}
 
 .wc-message-content.clickable {
   cursor: pointer; }
@@ -564,6 +580,7 @@ body .wc-app, .wc-app button, .wc-app input, .wc-app textarea {
 .wc-message-from-bot .wc-message-content {
   background-color: #eceff1;
   color: #000; 
+  line-height: normal;
   /*width: 90%; */}    /* added by Chin 5 May 2017 */
 
 .wc-message-from-bot svg.wc-message-callout path {
