fixed various bugs

--- a/index.ejs
+++ b/index.ejs
@@ -68,9 +68,9 @@
 			<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 			<script>
 				var botName="Digi";
-				var botImage="https://bot.digi.com.my/images/start-logo.PNG";
-				var botAvatar="https://yellowchat.azurewebsites.net/images/digi-avatar.png";
-				var botTyping="https://bot.digi.com.my/images/typingstatus.png";
+				var botImage="http://bot.digi.com.my/images/start-logo.PNG";
+				var botAvatar="http://bot.digi.com.my/images/digi-avatar.png";
+				var botTyping="http://bot.digi.com.my/images/typingstatus.png";
 			</script>
 			<script src="botchat.min.js"> </script>
 			<script src="digihelper.js"> </script>
