--- a/botchat.css
+++ b/botchat.css
@@ -82,7 +82,7 @@ body .wc-app, .wc-app button, .wc-app input, .wc-app textarea {
   background-color: #ffcc33;	
   box-shadow: 1px 2px 10px rgba(100, 100, 100, .3);
   position:fixed;
-  font-family: 'Segoe UI', sans-serif;
+  font-family: 'Roboto', sans-serif;
   text-align: center;
   font-size: 23px;
 }
@@ -97,6 +97,7 @@ body .wc-app, .wc-app button, .wc-app input, .wc-app textarea {
   height: 235px;
 }
 .wc-feedback-text{
+  font-family: 'Roboto', sans-serif;
   float: left;
   margin-left: 22px;
   width: 300px;
