--- a/index.ejs
+++ b/index.ejs
@@ -4,9 +4,9 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <title>Digi</title>
+		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
         <link href="botchat.css" rel="stylesheet" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-   
     </head>
     <body style="background:#fd0 url('http://new.digi.com.my/cs/site_template/digi/images/digi-pattern.png');">
 		<div id="wc-popup-url" class="wc-popup">
