--- a/botchat.css
+++ b/botchat.css
@@ -694,3 +694,37 @@ body .wc-app, .wc-app button, .wc-app input, .wc-app textarea {
 
 .wc-app ::-webkit-scrollbar-thumb {
   background-color: #dbdee1; }
+
+/* for password menu */
+.password-container {
+  z-index: -1;
+  height: 100%;
+  width: 100%;
+  background-color: #fd0;	
+  text-align: center;
+  position: fixed;
+  margin: -8px;
+}
+.password-wrapper {
+  z-index: 3;
+  height: 300px;
+  width: 360px;
+  top: 50%;
+  left: 50%;
+  margin-top: -150px;
+  margin-left: -180px;
+  background-color: #ffffff;	
+  box-shadow: 1px 2px 10px rgba(100, 100, 100, .3);
+  position:fixed;
+  font-family: 'Roboto', sans-serif;
+  text-align: center;
+  font-size: 23px;
+}
+.password-form-control {
+	position: relative;
+	font-size: 16px;
+	padding: 10px;
+	float: left;
+	margin-left: 22px;
+	width: 300px;
+}
