--- a/index.ejs
+++ b/index.ejs
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-        <title>Digi</title>
+        <title>Digi Chatbot BETA</title>
 		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
         <link href="botchat.css" rel="stylesheet" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -99,13 +99,13 @@
 			<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 -->
 			<script>
-				var botName="Digi";
+				var botName="Chatbot Beta";
 				var botImage="http://bot.digi.com.my/images/start-logo.PNG";
 				var botAvatar="http://bot.digi.com.my/images/digi-avatar.png";
 				var botTyping="http://bot.digi.com.my/images/typingstatus.png";
 			</script>
-			<script src="botchat.min.js"> </script>
 			<script src="digihelper.js"> </script>   
+			<script src="botchat.js"> </script>
 
 
 			<script>
