added retry timer

--- a/index.ejs
+++ b/index.ejs
@@ -105,7 +105,7 @@
 				var botTyping="http://bot.digi.com.my/images/typingstatus.png";
 			</script>
 			<script src="digihelper.js"> </script>   
-			<script src="botchat.js"> </script>
+			<script src="botchat.min.js"> </script>
 
 
 			<script>
