fixed button postback value

--- a/index.ejs
+++ b/index.ejs
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8" />
+        <META NAME="robots" CONTENT="noindex,nofollow">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <title>Digi Chatbot BETA</title>
 		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
